@@ -11,7 +11,8 @@ Changes in version 0.5.0 (released 2012-xx-xx)
 
  o Bug fix: read.xlsx2 doesn't read an extra emtpy column anymore.
 
- o Check the WISHLIST!
+ o Absolute paths are no longer needed for saveWorkbook and friends.
+ Reported by Mike Cheetham.
 
 Changes in version 0.4.2 (released 2012-02-08)
 
